add alert dialog

--- a/Todo
+++ b/Todo
@@ -11,3 +11,5 @@
 לסדר שהחצי עיגול התחתון של הטאבים יהיה שקוף וככה יהיה אפשר לראות את הגלריה גם בתוך החצי עיגול הזה כמו בפיגמה
 
 לעשות שעל קביעת תור/ביטול תור תתקבל הודעת סמס
+
+להעביר את הקומפוננטה של הטאבים לתיקייה של הנביגישון
